add_subdirectory(bigreqsproto)
add_subdirectory(compositeproto)
add_subdirectory(damageproto)
add_subdirectory(fixesproto)
add_subdirectory(fontsproto)
add_subdirectory(inputproto)
add_subdirectory(kbproto)
add_subdirectory(libxkbfile)
add_subdirectory(presentproto)
add_subdirectory(randrproto)
add_subdirectory(recordproto)
add_subdirectory(renderproto)
add_subdirectory(resourceproto)
add_subdirectory(scrnsaverproto)
add_subdirectory(videoproto)
add_subdirectory(xcmiscproto)
add_subdirectory(xextproto)
add_subdirectory(xf86bigfontproto)
add_subdirectory(xineramaproto)
add_subdirectory(xproto)
if(TVNC_GLX)
	add_subdirectory(glproto)
	add_subdirectory(libXext)
endif()
