add_subdirectory(bzip2)
add_subdirectory(libXau)
add_subdirectory(libXdmcp)
add_subdirectory(libXfont)
add_subdirectory(libfontenc)
add_subdirectory(libsha1)
add_subdirectory(libxshmfence)
add_subdirectory(pixman)
add_subdirectory(xtrans)
if(TVNC_GLX)
	add_subdirectory(libxcb)
	add_subdirectory(libX11)
endif()
