if(NOT TVNC_SYSTEMLIBS)
	add_subdirectory(bzip2)
endif()
if(USE_INTEL_ZLIB)
	add_subdirectory(zlib)
endif()
if(NOT TVNC_SYSTEMX11)
	add_subdirectory(libXau)
	add_subdirectory(libXdmcp)
	add_subdirectory(libXfont2)
	add_subdirectory(libfontenc)
	add_subdirectory(libxshmfence)
	add_subdirectory(pixman)
	add_subdirectory(xtrans)
	if(TVNC_GLX)
		add_subdirectory(libxcb)
		add_subdirectory(libX11)
	endif()
endif()
add_subdirectory(libsha1)
